[package]
name = "zemeroth"
version = "0.7.0-snapshot"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A 2D turn-based hexagonal tactical game."

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["zcomponents", "zgui", "zscene"]

[package.metadata.android]
assets = "assets/"

[dependencies]
ron = "0.7.0"
log = "0.4.14"
env_logger = "0.9.0"
derive_more = { version = "0.99.17", features = ["from"] }
serde = { version = "1.0.133", features = ["derive"] }
num = { version = "0.4.0", default-features = false }
ui = { path = "zgui", package = "zgui" }
zscene = { path = "zscene" }
zcomponents = { path = "zcomponents" }
rand = { version = "0.8.4", default-features = false, features = ["alloc"] }
quad-rand = { version = "0.2.1", features = ["rand"] }
mq = { package = "macroquad", version = "0.3.13" }
heck = "0.4.0"
once_cell = "1.9.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
