[package]
name = "zemeroth"
version = "0.7.0-snapshot"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "A 2D turn-based hexagonal tactical game."

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["zcomponents", "zgui", "zscene"]

[package.metadata.android]
assets = "assets/"
res = "android_res"
icon = "@mipmap/ic_launcher"
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
version_code = 6

# android_version = 33
target_sdk_version = 33

[package.metadata.android.activity_attributes]
"android:exported" = "true"
"android:screenOrientation" = "userLandscape"

[dependencies]
ron = "0.8.1"
log = "0.4"
env_logger = "0.10"
derive_more = { version = "0.99", features = ["from"] } # TODO: https://github.com/ozkriff/zemeroth/issues/251
serde = { version = "1.0.197", features = ["derive"] }
num = { version = "0.4", default-features = false }
ui = { path = "zgui", package = "zgui" }
zscene = { path = "zscene" }
zcomponents = { path = "zcomponents" }
rand = { version = "0.8.3", default-features = false, features = ["alloc"] }
quad-rand = { version = "0.2.1", features = ["rand"] }
mq = { package = "macroquad", version = "0.4.2" }
heck = "0.4.1"
once_cell = "1.6"
bumpalo = "=3.4.0"

[dev-dependencies]
pretty_assertions = "1.3"
