[package]
name = "ggwp-zgui"
version = "0.1.0"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Tiny and opionated GUI library"
keywords = ["ggez", "gamedev", "gui"]

[dependencies]
log = "0.4"
nalgebra = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = "0.5.0"

[target.wasm32-unknown-unknown.dependencies]
good-web-game = { git = "https://github.com/not-fl3/good-web-game" }
