[package]
name = "ggwp-zscene"
version = "0.1.0"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Scene and Actions for GGEZ"
keywords = ["ggez", "gamedev", "2D"]

[dependencies]
# ggez = "0.5.0-rc.0" # TODO: get back to crates.io version
#ggez = { git = "https://github.com/ozkriff/ggez", rev = "a23153a18" }

[target.wasm32-unknown-unknown.dependencies]
ggez = { git = "https://github.com/not-fl3/good-web-game", package = "good-web-game", features = ["nalgebra"] }

