[package]
name = "ggwp-zscene"
version = "0.1.0"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Scene and Actions for GGEZ"
keywords = ["ggez", "gamedev", "2D"]

[target.wasm32-unknown-unknown.dependencies]
good-web-game = { git = "https://github.com/not-fl3/good-web-game", features = ["nalgebra"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = { version="0.5.0-rc.1" }
