[package]
name = "ggwp-zscene"
version = "0.1.0"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Scene and Actions for GGEZ"
keywords = ["ggez", "gamedev", "2D"]

[dependencies]
nalgebra = { version = "0.18", features = ["mint"] }
ggez = { git = "https://github.com/not-fl3/good-web-game", package = "good-web-game" }
