[package]
name = "hate"
version = "0.1.0"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Häte2d (Hate2d) is a simple 2d game engine"
keywords = ["graphics", "gamedev", "2D", "game", "engine"]
categories = ["game-engines"]

[dependencies]
gfx_core = "0.8"
gfx_device_gl = "0.15"
gfx_window_glutin = "0.20"
gfx = "0.17"
glutin = "0.12"
cgmath = "0.16"
rusttype = "0.4"
png = "0.11"
serde = "1.0"
serde_derive = "1.0"

[target.arm-linux-androideabi.dependencies]
android_glue = "0.2"
