[package]
name = "zgui"
version = "0.1.0"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Tiny and opionated GUI library"
keywords = ["gamedev", "gui"]

[dependencies]
log = "0.4"
macroquad = { git = "https://github.com/not-fl3/macroquad" }
